# whatsapp-chatbot

./: .claudeignore  .coverage  .gitignore  README.md  config.py  docker-compose.yml  dockerfile  makefile  pyproject.toml  requirements.txt  todo.txt
alembic/: env.py
alembic/versions/: 63a23997adcd_add_google_id_and_thread_id_to_emails.py  73bea8db01c2_initial_migration.py  757f303fc397_remove_unique_filesname.py  7d69217bed82_init.py  a1b2c3d4e5f6_add_menu_documents.py
app/: ai_service.py  db.py  factories.py  handlers.py  main.py  main2.py  menu_router.py  models.py  pyproject.toml  redis_client.py  reservation_service.py  reservations_router.py  schemas.py  senders.py  settings.py  test.docker-compose.yml
app/modules/: ai_actions.py  ai_service.py  handlers.py  helpers.py  redis_client.py  reservation_service.py  session.py
app/routers/: main_router.py  menu_router.py  reservations_router.py  tables_router.py
app/tests/: conftest.py  test_admin_routing.py  test_ai_service.py  test_email_client.py  test_handlers.py  test_menu_router.py  test_openai_client_api.py  test_openai_client_module.py  test_reservations_router.py  test_shopify_client_api.py  test_shopify_client_module.py  test_tables_router.py  test_webhook.py
frontend/: Dockerfile  package-lock.json
frontend/.next/: _events.json  app-build-manifest.json  trace
frontend/.next/cache/: config.json
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/menu/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/reservations/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/tables/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: next.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/chunks/app/: layout.js
frontend/.next/static/chunks/app/menu/: page.js
frontend/.next/static/chunks/app/tables/: page.js
frontend/.next/static/css/app/: layout.css
frontend/.next/static/webpack/: webpack.744f3cfa434d501b.hot-update.js  webpack.a762b3d649356fbc.hot-update.js  webpack.aea51e6b2f5cfe76.hot-update.js  webpack.b8820045c3c191ca.hot-update.js  webpack.d9f223ab0e8dd210.hot-update.js  webpack.dd87926f89907dde.hot-update.js
frontend/.next/types/app/reservations/: page.ts
frontend/.next/types/app/tables/: page.ts
frontend/src/app/: api.ts  globals.css  layout.tsx
frontend/src/app/menu/: menu.module.css  page.tsx
frontend/src/app/reservations/: page.tsx  reservations.module.css
frontend/src/app/tables/: page.tsx  tables.module.css
(+4 files in other folders)
