[project]
name = "whatapp-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.132.0",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "openai>=1.30.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.2.1",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.22",
    "black>=26.3.0",
]
# pyproject.toml
[tool.coverage.run]
omit = ["app/tests/*"]
