[project]
name = "whatsapp-restaurant-bot"
version = "0.2.0"
description = "WhatsApp chatbot for restaurant — reservations, support, AI menu suggestions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.132.0",
    "httpx>=0.28.1",
    "openai>=1.30.0",
    "python-dotenv>=1.2.1",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
    "greenlet>=3.3.2",
    # dev/test
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "coverage[toml]>=7.13.4",
    "black>=26.1.0",
    "isort>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*"]
branch = true
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
